[project]
name = "leetcode-arai60"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.4.1",
    "ruff>=0.12.11",
]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "W", "UP"]
ignore = [
  "E501", # line-too-long
]
unfixable = [
  "F401", # unused-import
  "F841", # unused-variable
]
